# pico_serial

./: README.md  serial_new.h
examples/receiver/: CMakeLists.txt  main.c
examples/reciever/: CMakeLists.txt  main.c
examples/serial_echo_master/: CMakeLists.txt  main.c
examples/serial_echo_slave/: CMakeLists.txt  main.c
examples/transmitter/: CMakeLists.txt  main.c
